# rakuten2furusatotax

./: .env.sample  README.md  pyproject.toml
.github/workflows/: ci.yaml
rakuten2furusatotax/: cli.py  furusato_tax.py  furusato_tax_info.py
rakuten2furusatotax/rakuten/: __init__.py  login.py  order_history.py
tests/: cli_test.py
